--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,11 +2,15 @@
 <html>
 <head>
   <title><%= yield(:title) %></title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
+  <div> <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
+  <%= csrf_meta_tags %> </div>
+ </head>
 <body>
+
+<%= @user.name %>
+<br> level: <%= @user.level %> &nbsp &nbsp Credits: 
+<%= @user.credits %>
 
 <%= yield %>
 
