--- a/app/views/lobby/index.html.erb
+++ b/app/views/lobby/index.html.erb
@@ -2,16 +2,13 @@
 
 <h1>Welcome to the Blackjack App</h1>
 
-	<h1> <% @tables.each do |each| %>
-		<%= form_for(@game_list) do |f| %>
-		<%= f.hidden_field :user_id, :value => each.id %>
-		<%= f.hidden_field :table, :value => @tables.id %>
-		<%= f.submit each.name, class: "btn" %>
-		<%end%>
-		
-		Min: <%= each.min %>
-		Max: <%= each.max %>		
+		<%= link_to "Beginner", game_path(@game_list)%>
+		<%= link_to "Intermediate", game_path(@game_list)%>
+		<%= link_to "High Roller", game_path(@game_list)%>
+	<h1> <% @tables.each do |table| %>
+		Min: <%= table.min %>
+		Max: <%= table.max %>
+		<% @forward_id %>
 	<% end %>	
-		None 
-	
+		None
 	</h1>
