--- a/app/views/game/show.html.erb
+++ b/app/views/game/show.html.erb
@@ -1,4 +1,14 @@
 <% provide(:title, 'Blackjack Game') %>
-<%=link_to "Lobby", lobby_index_path %> </br>
-<%= @table.name %>
-<%= @user.name %>
+<h3><%=link_to "Lobby", lobby_index_path %></h3> </br>
+<div class="page-header"> <h1> <%= @table.name %></h1></div>
+
+  <i class="icon-glass"> </i> </br> Dealer </br></br>
+  <i class="icon-user"> </i>
+  <%= @user.name %>
+</h3>
+
+<div class="well">
+  <div class="btn-group">
+    <button type="button">bet</button>
+  </div>
+</div>
