--- a/app/views/lobby/index.html.erb
+++ b/app/views/lobby/index.html.erb
@@ -1,11 +1,14 @@
 <% provide(:title, 'Lobby') %>
-
-<h1>Welcome to the Blackjack App</h1>
-<h1>
+<div class= "pull-center">
+  <div class="page-header">
+  <h1>Welcome to the Blackjack App </br><small> Choose a table to get started</small></h1>
+</div>
+</div>
+<h2>
   <% @tables.each do |table| %>
-    <%= link_to_game @user, table %>
-    Min: <%= table.min %>
-    Max: <%= table.max %>
+  </br></br> <%= link_to_game @user, table %>
+  </br> Min: <%= table.min %>
+  </br> Max: <%= table.max %>
   <% end %>
   None
-</h1>
+</h2>
