WIP: Some tests are working for backbone. Right now we're in the process of working more with konacha.

--- a/app/views/game/show.html.erb
+++ b/app/views/game/show.html.erb
@@ -2,14 +2,19 @@
 <h3><%=link_to "Lobby", lobby_index_path %></h3> </br>
 <div class="page-header"> <h1> <%= @table.name %></h1></div>
 <section id = "game">
+</section>
+<script id="game-template" type="text/x-handlebars-template">
   <i class="icon-glass"> </i> </br> Dealer </br></br>
   <i class="icon-user"> </i>
   <%= @user.name %>
-</h3>
-<div class="well">
-  <input type="text" name="betInput" size="5">
-      <div class="btn-group">
-    <button type="button">bet</button>
+  <div class="well">
+    <input type="text" name="betInput" size="5">
+    <div class="btn-group">
+      <button type="button">bet</button>
+    </div>
   </div>
-</div>
-</section>
+</script>
+<script>
+  var view = new BetView();
+  view.initialize();
+</script>
