--- a/app/views/game/show.html.erb
+++ b/app/views/game/show.html.erb
@@ -7,6 +7,7 @@
   <i class="icon-glass"> </i> </br> Dealer </br></br>
   <i class="icon-user"> </i>
   <%= @user.name %>
+  <label id="betLabel">{{value}}</label>
   <div class="well">
     <input type="text" name="betInput" size="5">
     <div class="btn-group">
