--- a/app/views/game/show.html.erb
+++ b/app/views/game/show.html.erb
@@ -3,13 +3,18 @@
 <div class="page-header"> <h1> <%= @table.name %></h1></div>
 <section id = "game">
 </section>
+<script>
+  var myUser = new blackjack.User({id: <%= @user.id %>});
+  myUser.fetch({success:function(){ var view = new blackjack.userView();
+      view.initialize();
+  }});
+</script>
 <script id="game-template" type="text/x-handlebars-template">
   <i class="icon-glass"> </i> </br> Dealer </br></br>
   <i class="icon-user"> </i>
   <label id="betLabel"></label>
-  <label id="creditsLabel"></label>
+  <label id="creditsLabel"> </label>
   <label id="levelLabel"></label>
-  <%= @user.credits %>
   <%= @user.name %>
   <div class="well">
     <input type="text" id="betInput" name="betInput" size="5">
@@ -17,10 +22,4 @@
       <button id="betButton">bet</button>
     </div>
   </div>
-</script>
-<script>
-  var view = new userView();
-  view.initialize();
-  user_credits = <%=@user.credits%>;
-    console.log(user_credits);
 </script>
