WIP displaying cards with handlebars template

--- a/app/views/game/show.html.erb
+++ b/app/views/game/show.html.erb
@@ -15,10 +15,11 @@
   }});
 
 </script>
-
 <script id="game-template" type="text/x-handlebars-template">
   <i class="icon-glass"> </i> </br> Dealer </br></br>
   <i class="icon-user"> </i>
+  <label id="suite">{{suite}}</label>
+  <label id="number">{{number}}</label>
   <label id="betLabel"></label>
   <label id="creditsLabel"> </label>
   <label id="levelLabel"></label>
