--- a/app/views/game/show.html.erb
+++ b/app/views/game/show.html.erb
@@ -1,6 +1,8 @@
 <% provide(:title, 'Blackjack Game') %>
 <h3><%=link_to "Lobby", lobby_index_path %></h3> </br>
 <div class="page-header"> <h1> <%= @table.name %></h1></div>
+<section id= "cards">
+</section>
 <section id = "game">
 </section>
 <script>
@@ -15,11 +17,18 @@
   }});
 
 </script>
+
+
+
+<script id="card-template" type="text/x-handlebars-template">
+ {{#each cards}} <div id="card" >{{this.faceValue}} {{this.suit}}</div>{{/each}}
+</script>
+
+
+
 <script id="game-template" type="text/x-handlebars-template">
   <i class="icon-glass"> </i> </br> Dealer </br></br>
   <i class="icon-user"> </i>
-  <label id="suite">{{suite}}</label>
-  <label id="number">{{number}}</label>
   <label id="betLabel"></label>
   <label id="creditsLabel"> </label>
   <label id="levelLabel"></label>
