Finished function for counting the total value of the cards in a given hand.

--- a/app/views/game/show.html.erb
+++ b/app/views/game/show.html.erb
@@ -41,6 +41,7 @@
     <div class="btn-group">
       <button id="betButton">Bet</button>
       <button id="hitButton">Hit</button>
+      <button id="standButton">Stand</button>
     </div>
   </div>
 </script>
