--- a/app/views/game/show.html.erb
+++ b/app/views/game/show.html.erb
@@ -1,8 +1,8 @@
 <% provide(:title, 'Blackjack Game') %>
 <h3><%=link_to "Lobby", lobby_index_path %></h3> </br>
 <div class="page-header"> <h1> <%= @table.name %></h1></div>
-<!-- <section id= "winner"> -->
-<!-- </section> -->
+<section id= "winner">
+</section>
 <section id= "dealerCards">
 </section>
   <strong>Dealer</strong>
