Minor file fixes. Nothing really changed in the application.

--- a/app/views/game/show.html.erb
+++ b/app/views/game/show.html.erb
@@ -29,7 +29,7 @@
 
 
 <script id="card-template" type="text/x-handlebars-template">
- {{#each cards}} <div id="card" >{{this.faceValue}} {{this.suit}}</div>{{/each}}
+ {{#each cards}} <div id="card" >{{this.faceValue}} {{this.suit}}</div>{{each}}
 </script>
 
 
